--- a/Final.ipynb
+++ b/Final.ipynb
@@ -32,9 +32,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# import the \"crash\" data\n",
+    "data = pd.read_csv(\"my_map_grid.csv\",header=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# preprocessing\n",
+    "# lowercase: http://stackoverflow.com/a/38931854\n",
+    "data.columns = data.columns.str.lower()\n",
+    "# remove spaces\n",
+    "data.columns = data.columns.str.replace(' ', '_')\n",
+    "# special cases\n",
+    "data.columns = data.columns.str.replace('crash_i_d', 'crash_id')\n",
+    "# remove whateva data\n",
+    "\n",
+    "# replace ['No Data','Not Applicable'] with NaN\n",
+    "data.replace(to_replace='No Data', value=np.nan, inplace=True)\n",
+    "data.replace(to_replace='Not Applicable', value=np.nan, inplace=True)\n",
+    "data.latitude = pd.to_numeric(data.latitude)\n",
+    "data.longitude = pd.to_numeric(data.longitude)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -65,23 +109,9 @@
     "# https://research.vahula.com/scikit-learns-decision-tree-classifier-698ddbb05b\n",
     "# http://scikit-learn.org/stable/modules/tree.html\n",
     "\n",
-    "# import the \"crash\" data\n",
-    "data = pd.read_csv(\"my_map_grid.csv\",header=10)\n",
     "\n",
-    "# preprocessing\n",
-    "# lowercase: http://stackoverflow.com/a/38931854\n",
-    "data.columns = data.columns.str.lower()\n",
-    "# remove spaces\n",
-    "data.columns = data.columns.str.replace(' ', '_')\n",
-    "# special cases\n",
-    "data.columns = data.columns.str.replace('crash_i_d', 'crash_id')\n",
-    "# remove whateva data\n",
     "\n",
-    "# replace ['No Data','Not Applicable'] with NaN\n",
-    "data.replace(to_replace='No Data', value=np.nan, inplace=True)\n",
-    "data.replace(to_replace='Not Applicable', value=np.nan, inplace=True)\n",
-    "data.latitude = pd.to_numeric(data.latitude)\n",
-    "data.longitude = pd.to_numeric(data.longitude)\n",
+    "\n",
     "\n",
     "# Let's select a small number of important features\n",
     "# smalldf = data[['crash_severity',\n",
@@ -158,9 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -225,9 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import the \"crash\" data\n",
@@ -327,7 +353,6 @@
    "cell_type": "code",
    "execution_count": 123,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -354,9 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#cross validation for n_estimators\n",
@@ -395,9 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#cross validation for colsample_bytree\n",
@@ -436,9 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -551,7 +570,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -565,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
