ipynb: imputing missing speed limits

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import txdot_parse as txpars"
+   ]
   },
   {
    "cell_type": "code",
@@ -75,7 +75,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "########################################\n",
+      "pre : total missing speed limit data:\n",
+      " 458 (0.20519713261648745 of 1)\n",
+      "post: total missing speed limit data:\n",
+      " 458 (0.20519713261648745 of 1)\n",
+      "########################################\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.speed_limit.replace(0,np.nan,inplace=True)\n",
+    "data.speed_limit.replace(-1,np.nan,inplace=True)\n",
+    "# impute speed limits\n",
+    "print(\"########################################\")\n",
+    "verbose=0\n",
+    "if(verbose):\n",
+    "    print(data.speed_limit.value_counts())\n",
+    "totalmissing   = data[data['speed_limit'].isnull()].shape[0]\n",
+    "missingpercent = totalmissing / data.shape[0]\n",
+    "print(\"pre : total missing speed limit data:\\n %s (%s of 1)\" % (totalmissing, missingpercent))\n",
+    "if(verbose):\n",
+    "    print(data.speed_limit.unique())\n",
+    "data = txpars.impute_mph(data, verbose=0)\n",
+    "totalmissing   = data[data['speed_limit'].isnull()].shape[0]\n",
+    "missingpercent = totalmissing / data.shape[0]\n",
+    "print(\"post: total missing speed limit data:\\n %s (%s of 1)\" % (totalmissing, missingpercent))\n",
+    "if(verbose):\n",
+    "    print(data.speed_limit.unique())\n",
+    "    print(data.speed_limit.value_counts())\n",
+    "    print(data.info())\n",
+    "print(\"########################################\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
