fixing errors resulting from small sample size

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -359,7 +359,7 @@
     "\n",
     "#split data into train/test,x/y\n",
     "np.random.seed(0)\n",
-    "train, test = train_test_split(data)\n",
+    "train, test = train_test_split(data[data['crash_severity'] != 'Unknown'])\n",
     "x_train = train.drop(['crash_severity'],axis=1)\n",
     "y_train = train.crash_severity\n",
     "x_test = test.drop(['crash_severity'],axis=1)\n",
