adding HH:mm to histogram

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -34,7 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import txdot_parse as txpars"
+    "import txdot_parse as txpars\n",
+    "import helpers"
    ]
   },
   {
@@ -270,9 +271,15 @@
     "# remove spaces\n",
     "data.columns = data.columns.str.replace(' ', '_')\n",
     "\n",
-    "data.crash_time.plot.hist(bins=50)\n",
-    "plt.xlabel('Time of Day (24 hr)')\n",
-    "plt.title('Frequency of Bike Crashes For Time of Day (2010-2017)')\n",
+    "# add \n",
+    "ax_time = helpers.get_ax_time(\n",
+    "        interval = '24h',\n",
+    "        title = 'Frequency of Bike Crashes For Time of Day (2010-2017)',\n",
+    "        xlabel = 'Time of Day (24 hr)',\n",
+    "        ylabel = 'count',\n",
+    "        )\n",
+    "\n",
+    "data.crash_time.hist(bins=48,ax=ax_time)\n",
     "plt.show()\n",
     "\n",
     "# Let's see if there is a trend of total bike crashes by year\n",
