refactor: splitting cells into execution and display
this allows the models to be run without changing the images.
in turn, this simplifies the git diff
and allows the model to be run even if the environment is missing some image libs

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -304,6 +304,27 @@
    "cell_type": "code",
    "execution_count": 123,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#cross validation function\n",
+    "def accuracy_cv(model):\n",
+    "    accuracy = cross_val_score(model,x_train,y_train.as_matrix().ravel(),scoring='accuracy',cv=5)\n",
+    "    return (accuracy)\n",
+    "\n",
+    "max_depths = np.linspace(1,10,10,dtype=int)\n",
+    "\n",
+    "#cross validation for max_depth parameter\n",
+    "cv_xgb = [accuracy_cv(XGBClassifier(max_depth=max_depth)).mean()\n",
+    "          for max_depth in max_depths]\n",
+    "best_max_depth = cv_xgb.idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {
     "collapsed": false,
     "scrolled": false
    },
@@ -320,23 +341,26 @@
     }
    ],
    "source": [
-    "#cross validation function\n",
-    "def accuracy_cv(model):\n",
-    "    accuracy = cross_val_score(model,x_train,y_train.as_matrix().ravel(),scoring='accuracy',cv=5)\n",
-    "    return (accuracy)\n",
-    "\n",
-    "max_depths = np.linspace(1,10,10,dtype=int)\n",
-    "\n",
-    "#cross validation for max_depth parameter\n",
-    "cv_xgb = [accuracy_cv(XGBClassifier(max_depth=max_depth)).mean()\n",
-    "          for max_depth in max_depths]\n",
     "#plot results\n",
     "cv_xgb = pd.Series(cv_xgb, index = max_depths)\n",
     "cv_xgb.plot(title = \"Test Max Depths for XGB\")\n",
     "plt.xlabel(\"Max_Depth\")\n",
-    "plt.ylabel(\"Accuracy\")\n",
-    "best_max_depth = cv_xgb.idxmax()\n",
-    "\n"
+    "plt.ylabel(\"Accuracy\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#cross validation for n_estimators\n",
+    "nestimators = np.linspace(91,110,dtype=int)\n",
+    "cv_xgb = [accuracy_cv(XGBClassifier(max_depth=best_max_depth,n_estimators=nestimator)).mean()\n",
+    "          for nestimator in nestimators]\n",
+    "best_n_estimators = cv_xgb.idxmax()"
    ]
   },
   {
@@ -358,16 +382,26 @@
     }
    ],
    "source": [
-    "#cross validation for n_estimators\n",
-    "nestimators = np.linspace(91,110,dtype=int)\n",
-    "cv_xgb = [accuracy_cv(XGBClassifier(max_depth=best_max_depth,n_estimators=nestimator)).mean()\n",
-    "          for nestimator in nestimators]\n",
     "#plot results\n",
     "cv_xgb = pd.Series(cv_xgb, index = nestimators)\n",
     "cv_xgb.plot(title = \"Test n_estimators for XGB\")\n",
     "plt.xlabel(\"N_Estimator\")\n",
-    "plt.ylabel(\"Accuracy\")\n",
-    "best_n_estimators = cv_xgb.idxmax()"
+    "plt.ylabel(\"Accuracy\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#cross validation for colsample_bytree\n",
+    "colsample_bytree = np.linspace(.5,1)\n",
+    "cv_xgb = [accuracy_cv(XGBClassifier(max_depth=best_max_depth,n_estimators=best_n_estimators,colsample_bytree=i)).mean()\n",
+    "          for i in colsample_bytree]\n",
+    "best_colsample_bytree = cv_xgb.idxmax()"
    ]
   },
   {
@@ -389,16 +423,11 @@
     }
    ],
    "source": [
-    "#cross validation for colsample_bytree\n",
-    "colsample_bytree = np.linspace(.5,1)\n",
-    "cv_xgb = [accuracy_cv(XGBClassifier(max_depth=best_max_depth,n_estimators=best_n_estimators,colsample_bytree=i)).mean()\n",
-    "          for i in colsample_bytree]\n",
     "#plot results\n",
     "cv_xgb = pd.Series(cv_xgb, index = colsample_bytree)\n",
     "cv_xgb.plot(title = \"Test colsample_bytree for XGB\")\n",
     "plt.xlabel(\"Colsample_Bytree\")\n",
-    "plt.ylabel(\"Accuracy\")\n",
-    "best_colsample_bytree = cv_xgb.idxmax()"
+    "plt.ylabel(\"Accuracy\")"
    ]
   },
   {
