refactor: fixing incorrect split of cells

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -317,8 +317,7 @@
     "\n",
     "#cross validation for max_depth parameter\n",
     "cv_xgb = [accuracy_cv(XGBClassifier(max_depth=max_depth)).mean()\n",
-    "          for max_depth in max_depths]\n",
-    "best_max_depth = cv_xgb.idxmax()"
+    "          for max_depth in max_depths]\n"
    ]
   },
   {
@@ -345,7 +344,8 @@
     "cv_xgb = pd.Series(cv_xgb, index = max_depths)\n",
     "cv_xgb.plot(title = \"Test Max Depths for XGB\")\n",
     "plt.xlabel(\"Max_Depth\")\n",
-    "plt.ylabel(\"Accuracy\")\n"
+    "plt.ylabel(\"Accuracy\")\n",
+    "best_max_depth = cv_xgb.idxmax()"
    ]
   },
   {
@@ -359,8 +359,7 @@
     "#cross validation for n_estimators\n",
     "nestimators = np.linspace(91,110,dtype=int)\n",
     "cv_xgb = [accuracy_cv(XGBClassifier(max_depth=best_max_depth,n_estimators=nestimator)).mean()\n",
-    "          for nestimator in nestimators]\n",
-    "best_n_estimators = cv_xgb.idxmax()"
+    "          for nestimator in nestimators]\n"
    ]
   },
   {
@@ -386,7 +385,8 @@
     "cv_xgb = pd.Series(cv_xgb, index = nestimators)\n",
     "cv_xgb.plot(title = \"Test n_estimators for XGB\")\n",
     "plt.xlabel(\"N_Estimator\")\n",
-    "plt.ylabel(\"Accuracy\")\n"
+    "plt.ylabel(\"Accuracy\")\n",
+    "best_n_estimators = cv_xgb.idxmax()"
    ]
   },
   {
@@ -400,8 +400,7 @@
     "#cross validation for colsample_bytree\n",
     "colsample_bytree = np.linspace(.5,1)\n",
     "cv_xgb = [accuracy_cv(XGBClassifier(max_depth=best_max_depth,n_estimators=best_n_estimators,colsample_bytree=i)).mean()\n",
-    "          for i in colsample_bytree]\n",
-    "best_colsample_bytree = cv_xgb.idxmax()"
+    "          for i in colsample_bytree]\n"
    ]
   },
   {
@@ -427,7 +426,8 @@
     "cv_xgb = pd.Series(cv_xgb, index = colsample_bytree)\n",
     "cv_xgb.plot(title = \"Test colsample_bytree for XGB\")\n",
     "plt.xlabel(\"Colsample_Bytree\")\n",
-    "plt.ylabel(\"Accuracy\")"
+    "plt.ylabel(\"Accuracy\")\n",
+    "best_colsample_bytree = cv_xgb.idxmax()"
    ]
   },
   {
