fixing errors caused by small target size

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -293,7 +293,10 @@
     "\n",
     "#split data into train/test,x/y\n",
     "np.random.seed(0)\n",
-    "train, test = train_test_split(data)\n",
+    "\n",
+    "# The minimum number of groups for any class cannot be less than n_splits=5\n",
+    "# crash_severity == 'Unknown' has only 4 samples\n",
+    "train, test = train_test_split(data[data['crash_severity'] != 'Unknown'])\n",
     "x_train = train.drop(['crash_severity'],axis=1)\n",
     "y_train = train.crash_severity\n",
     "x_test = test.drop(['crash_severity'],axis=1)\n",
