--- a/Final.ipynb
+++ b/Final.ipynb
@@ -1071,12 +1071,133 @@
     "\n",
     "Decision Trees are good for creating explainable models."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#stack knn, decision tree, random forest, and model with xgb\n",
+    "\n",
+    "########################\n",
+    "#it looks like decision tree was trained with a different data set than the others\n",
+    "#if we want to incorporate the predictions into the final model then we should\n",
+    "#retrain it with the same dataset\n",
+    "########################\n",
+    "\n",
+    "#get predictions of all models for train and test data\n",
+    "#x_train_tree_pred = tree_classifier.predict(x_train)\n",
+    "#x_test_tree_pred = tree_classifier.predict(x_test)\n",
+    "x_train_knn_pred = knn_model.predict(x_train)\n",
+    "x_test_knn_pred = knn_model.predict(x_test)\n",
+    "x_train_rForest_pred = randForest.predict(x_train)\n",
+    "x_test_rForest_pred = randForest.predict(x_test)\n",
+    "\n",
+    "#append data to train and test matrices\n",
+    "x_train['knn_pred'] = x_train_knn_pred\n",
+    "x_test['knn_pred'] = x_test_knn_pred\n",
+    "x_train['rForest_pred'] = x_train_rForest_pred\n",
+    "x_test['rForest_pred'] = x_test_rForest_pred\n",
+    "\n",
+    "dummies_needed_list = [\n",
+    "    'knn_pred',\n",
+    "    'rForest_pred'\n",
+    "        ]\n",
+    "\n",
+    "# encode x_train for dummies_needed_list\n",
+    "for feat in dummies_needed_list:\n",
+    "    x_train = pd.concat([x_train,pd.get_dummies(x_train[feat],prefix=feat)],axis=1)\n",
+    "    x_train = x_train.drop([feat],axis=1)\n",
+    "    \n",
+    "# encode x_test for dummies_needed_list\n",
+    "for feat in dummies_needed_list:\n",
+    "    x_test = pd.concat([x_test,pd.get_dummies(x_test[feat],prefix=feat)],axis=1)\n",
+    "    x_test = x_test.drop([feat],axis=1)\n",
+    "\n",
+    "#add misisng features to ensure test and train are the same dimensions\n",
+    "missing_test_cols = list(set(x_train.columns)-set(x_test.columns))\n",
+    "for i in missing_test_cols:\n",
+    "    x_test[i] = 0\n",
+    "    \n",
+    "missing_train_cols = list(set(x_test.columns)-set(x_train.columns))\n",
+    "if len(missing_train_cols)>0:\n",
+    "    for i in missing_train_cols:\n",
+    "        x_train[i] = 0\n",
+    "\n",
+    "#make sure features appear in the same order in train and test\n",
+    "cols = x_train.columns\n",
+    "x_test = x_test[cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#train xgb with new dataset\n",
+    "\n",
+    "#find best input parameters\n",
+    "max_depths = np.linspace(1,5,5,dtype=int)\n",
+    "cv_stacked = [accuracy_cv(XGBClassifier(max_depth=max_depth)).mean()\n",
+    "              for max_depth in max_depths]\n",
+    "cv_stacked = pd.Series(cv_stacked,index=max_depths)\n",
+    "best_max_depth = cv_stacked.idxmax()\n",
+    "\n",
+    "n_estimators = np.linspace(90,110,21,dtype=int)\n",
+    "cv_stacked = [accuracy_cv(XGBClassifier(max_depth=best_max_depth,n_estimators=n_estimator)).mean()\n",
+    "              for n_estimator in n_estimators]\n",
+    "cv_stacked = pd.Series(cv_stacked,index=n_estimators)\n",
+    "best_n_estimators = cv_stacked.idxmax()\n",
+    "\n",
+    "colsamples = np.linspace(.6,1)\n",
+    "cv_stacked = [accuracy_cv(XGBClassifier(max_depth=best_max_depth,colsample_bytree=colsample)).mean()\n",
+    "              for colsample in colsamples]\n",
+    "cv_stacked = pd.Series(cv_stacked,index=colsamples)\n",
+    "best_colsamples = cv_stacked.idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#train model with new input parameters\n",
+    "model_xgb = XGBClassifier(max_depth=best_max_depth,colsample_bytree=best_colsamples,n_estimators=best_n_estimators)\n",
+    "model_xgb.fit(x_train,y_train)\n",
+    "print(\"XGB Train accuracy:\", model_xgb.score(x_train,y_train))\n",
+    "print(\"XGB Test accuracy:\",model_xgb.score(x_test,y_test),'\\n')\n",
+    "\n",
+    "\n",
+    "#print important features list and their overall importance in the xgb model\n",
+    "columns = []\n",
+    "feature_importances = []\n",
+    "for i in range(0,len(model_xgb.feature_importances_)):\n",
+    "    if model_xgb.feature_importances_[i]!=0:\n",
+    "        columns.append(x_train.columns[i])\n",
+    "        feature_importances.append(model_xgb.feature_importances_[i])\n",
+    "        \n",
+    "sorted_index = np.argsort(feature_importances)[::-1]\n",
+    "for i in sorted_index:\n",
+    "    print(columns[i],\":\",feature_importances[i])\n",
+    "    \n",
+    "#error with to_graphviz for this model. not sure what is causing it\n",
+    "#to_graphviz(model_xgb)"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
