ipynb: fixing markdown

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -952,6 +952,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KNN: K Nearest Neighbours"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
@@ -1053,23 +1060,6 @@
     "\n",
     "print(\"KNN Train accuracy:\", knn_model.score(x_train,y_train))\n",
     "print(\"KNN Test accuracy:\", knn_model.score(x_test,y_test))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Decision Tree\n",
-    "===\n",
-    "\n",
-    "Human-Readable Model\n",
-    "---\n",
-    "\n",
-    "The complex model is good for making route predictions.\n",
-    "\n",
-    "But what about getting an intuitive feel?\n",
-    "\n",
-    "Decision Trees are good for creating explainable models."
    ]
   },
   {
@@ -1191,6 +1181,23 @@
     "    \n",
     "#error with to_graphviz for this model. not sure what is causing it\n",
     "#to_graphviz(model_xgb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decision Tree\n",
+    "===\n",
+    "\n",
+    "Human-Readable Model\n",
+    "---\n",
+    "\n",
+    "The complex model is good for making route predictions.\n",
+    "\n",
+    "But what about getting an intuitive feel?\n",
+    "\n",
+    "Decision Trees are good for creating explainable models."
    ]
   }
  ],
