--- a/Final.ipynb
+++ b/Final.ipynb
@@ -49,8 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introduction\n",
-    "==="
+    "# Introduction"
    ]
   },
   {
@@ -158,8 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exploration\n",
-    "==="
+    "# Exploration"
    ]
   },
   {
@@ -239,16 +237,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analysis\n",
-    "==="
+    "# Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DecisionTree\n",
-    "==="
+    "## DecisionTree"
    ]
   },
   {
@@ -397,8 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "XGB Model\n",
-    "===="
+    "## XGB - Extreme Gradient Boosting"
    ]
   },
   {
@@ -816,8 +811,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random Forest\n",
-    "==="
+    "## Random Forest"
    ]
   },
   {
@@ -955,7 +949,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# KNN: K Nearest Neighbours"
+    "## KNN: K Nearest Neighbours"
    ]
   },
   {
@@ -1060,6 +1054,13 @@
     "\n",
     "print(\"KNN Train accuracy:\", knn_model.score(x_train,y_train))\n",
     "print(\"KNN Test accuracy:\", knn_model.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ensemble - Stacking The Models"
    ]
   },
   {
@@ -1187,8 +1188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Decision Tree\n",
-    "===\n",
+    "# Explainability using DecisionTree\n",
     "\n",
     "Human-Readable Model\n",
     "---\n",
