ipynb: ensemble markdown

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -1182,9 +1182,24 @@
     "model_xgb = XGBClassifier(max_depth=best_max_depth,colsample_bytree=best_colsamples,n_estimators=best_n_estimators)\n",
     "model_xgb.fit(x_train,y_train)\n",
     "print(\"XGB Train accuracy:\", model_xgb.score(x_train,y_train))\n",
-    "print(\"XGB Test accuracy:\",model_xgb.score(x_test,y_test),'\\n')\n",
-    "\n",
-    "\n",
+    "print(\"XGB Test accuracy:\",model_xgb.score(x_test,y_test),'\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensemble - Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "#print important features list and their overall importance in the xgb model\n",
     "columns = []\n",
     "feature_importances = []\n",
@@ -1203,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
