ipynb: fixing map display

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -292,13 +292,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe src=https://yoinkbird.github.io/crashes.html width=700 height=525></iframe>"
+       "<iframe src=output/crashes.html width=700 height=525></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
    "source": [
     "print(\"Total Crashes involving Severe Injuries and fatalities from 2010-2017\")\n",
     "import IPython\n",
-    "url = 'https://yoinkbird.github.io/crashes.html'\n",
+    "url = 'output/crashes.html'\n",
     "iframe = '<iframe src=' + url + ' width=700 height=525></iframe>'\n",
     "IPython.display.HTML(iframe)"
    ]
