--- a/Final.ipynb
+++ b/Final.ipynb
@@ -60,11 +60,11 @@
     "\n",
     "* *  [Impute Missing Values](#Impute-Missing-Values)\n",
     "\n",
-    "*  [Exploration](#Exploration)\n",
-    "\n",
-    "*  [Analysis](#Analysis)\n",
+    "*  [Data Exploration](#Data-Exploration)\n",
     "\n",
     "* *  [DecisionTree](#DecisionTree)\n",
+    "\n",
+    "*  [Analysis](#Analysis)\n",
     "\n",
     "* *  [XGB - Extreme Gradient Boosting](#XGB---Extreme-Gradient-Boosting)\n",
     "\n",
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploration"
+    "# Data Exploration"
    ]
   },
   {
@@ -309,13 +309,6 @@
     "url = 'output/crashes.html'\n",
     "iframe = '<iframe src=' + url + ' width=700 height=525></iframe>'\n",
     "IPython.display.HTML(iframe)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Analysis"
    ]
   },
   {
@@ -465,6 +458,13 @@
     "from sklearn.metrics import confusion_matrix\n",
     "cm = confusion_matrix(y_test,tree_classifier.predict(X_test))\n",
     "helpers.plot_confusion_matrix(cm,classes=tree_classifier.classes_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis"
    ]
   },
   {
