--- a/Final.ipynb
+++ b/Final.ipynb
@@ -62,7 +62,13 @@
     "\n",
     "*  [Data Exploration](#Data-Exploration)\n",
     "\n",
-    "* *  [DecisionTree](#DecisionTree)\n",
+    "* *  [Visualisation](#Visualisation)\n",
+    "\n",
+    "* *  [Feature Selection](#Feature-Selection)\n",
+    "\n",
+    "* * *  [PCA](#PCA)\n",
+    "\n",
+    "* * *  [Decision Tree Classifier](#Decision-Tree-Classifier)\n",
     "\n",
     "*  [Analysis](#Analysis)\n",
     "\n",
@@ -195,6 +201,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualisation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -315,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Significance"
+    "## Feature Selection"
    ]
   },
   {
