Added some markdown text for preprocessing section.

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -101,14 +101,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Preparation"
+    "# Data Preparation\n",
+    "Data obtained from TxDOT Crash Query Tool: https://cris.dot.state.tx.us/public/Query/#/public/welcome\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing"
+    "## Preprocessing\n",
+    "* Missing Data: ‘No Data’, ‘Not Applicable’, ‘UNKOWN’ replaced by np.nan\n",
+    "* Feature Names: ‘ ’ replaced by ‘_’ and converted to all lowercase\n",
+    "* Categorical Features: One hot encoding to make categorical features usable in a model\n",
+    "* Crash Time: Data is given in 24 hour time format. Convert this to a decimal representation"
    ]
   },
   {
@@ -151,7 +158,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Impute Missing Values"
+    "## Impute Missing Values\n",
+    "Speed limit could be important for our model, so impute as many missing speed limit values as possible."
    ]
   },
   {
@@ -209,7 +217,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualisation"
+    "## Visualisation\n",
+    "\n",
+    "Plot a few graphs to get an overview of our data\n",
+    "* Number of reported bike crashes for times of day\n",
+    "* Overall trend in total reported bike crashes by year (2010-2016)\n",
+    "* Breakdown of all crash severity reports"
    ]
   },
   {
@@ -1135,7 +1148,7 @@
     "# empty list that will hold cv scores\n",
     "cv_scores = []\n",
     "\n",
-    "# perform 10-fold cross validation\n",
+    "# perform 5-fold cross validation\n",
     "for k in neighbors:\n",
     "    knn = KNeighborsClassifier(n_neighbors=k)\n",
     "    scores = cross_val_score(knn, x_train, y_train, cv=5, scoring='accuracy')\n",
