ipynb: adding maps output

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -325,7 +325,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -349,7 +349,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Morning+Daytime: Total Crashes involving Severe Injuries and fatalities from 2010-2017\n"
+      "Morning+Daytime (500 - 1530): Total Crashes involving Severe Injuries and fatalities from 2010-2017\n"
      ]
     },
     {
@@ -361,7 +361,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +385,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Happy Hour: Total Crashes involving Severe Injuries and fatalities from 2010-2017\n"
+      "Happy Hour (1530 - 1900) Total Crashes involving Severe Injuries and fatalities from 2010-2017\n"
      ]
     },
     {
@@ -397,7 +397,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -421,7 +421,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Night Time: Total Crashes involving Severe Injuries and fatalities from 2010-2017\n"
+      "Night Time (1900 - 500): Total Crashes involving Severe Injuries and fatalities from 2010-2017\n"
      ]
     },
     {
@@ -433,7 +433,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
