--- a/Final.ipynb
+++ b/Final.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "* *  [Ensemble - Results](#Ensemble---Results)\n",
     "\n",
-    "*  [Explainability using DecisionTree](#Explainability-using-DecisionTree)"
+    "*  [ROC Optimisation](#ROC-Optimisation)\n"
    ]
   },
   {
@@ -290,9 +290,15 @@
     "# Spread of Crash Severity data from 2010-2017\n",
     "# Using seaborn for ease of use with categorical data\n",
     "sns.countplot(x=\"crash_severity\", data=data);\n",
-    "plt.xticks(rotation=45)\n",
+    "plt.xticks(rotation=45, rotation_mode=\"anchor\",ha=\"right\")\n",
     "plt.title('Crash Severity Total Count (2010-2017)')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "if(0):\n",
+    "    sns.countplot(x=\"street_name\", data=data);\n",
+    "    plt.xticks(rotation=45, rotation_mode=\"anchor\",ha=\"right\")\n",
+    "    plt.title('Total Accidents by Street Name (2010-2017)')\n",
+    "    plt.show()"
    ]
   },
   {
@@ -1538,16 +1544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explainability using DecisionTree\n",
-    "\n",
-    "Human-Readable Model\n",
-    "---\n",
-    "\n",
-    "The complex model is good for making route predictions.\n",
-    "\n",
-    "But what about getting an intuitive feel?\n",
-    "\n",
-    "Decision Trees are good for creating explainable models."
+    "## XGB ROC CV Optimisation"
    ]
   },
   {
