--- a/Final.ipynb
+++ b/Final.ipynb
@@ -370,6 +370,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Total Map of Crashes:\n",
+    "\n",
+    "The clustering is expected for anyone familiar with Austin roads:\n",
+    "\n",
+    "* Downtown area\n",
+    "* Riverside\n",
+    "* Congress\n",
+    "* Lamar\n",
+    "* Guadalupe\n",
+    "\n",
+    "Very few severe accidents outside of the core area.\n",
+    "\n",
+    "The subsequent maps investiage the spikes observed in the time-of-day bar-chart."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
@@ -406,6 +425,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crashes with Severe Injuries between 05:00 and 15:30\n",
+    "\n",
+    "This looks roughly the same as the map of overall crashes, which is explained by the overall higher rate of incidents during these times."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -439,6 +467,17 @@
     "url = 'output/crashes_1530_1900.html'\n",
     "iframe = '<iframe src=' + url + ' width=700 height=525></iframe>'\n",
     "IPython.display.HTML(iframe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crashes with Severe Injuries between 15:30 and 19:00\n",
+    "\n",
+    "There are not as many severe injuries during this time, but do not the persistent clustering around down-town; this does not seem to change much as compared to the day-time map.\n",
+    "\n",
+    "This could be due to the role downtown plays as a transit hub; most paths go through this area."
    ]
   },
   {
@@ -481,7 +520,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Selection"
+    "Crashes with Severe Injuries between 19:00 and 05:00\n",
+    "\n",
+    "The bar-chart showed an overall decrease during this time.\n",
+    "\n",
+    "Note the increase in accidents around down-town, which could correspond to the spikes observed around 2 am in the chart as bars close."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Selection\n",
+    "\n",
+    "\n",
+    "The features were split into continuous and non-continuous categories.\n",
+    "\n",
+    "Some features require dummy-encoding"
    ]
   },
   {
@@ -522,7 +577,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decision Tree Classifier"
+    "### Decision Tree Classifier\n",
+    "\n",
+    "The dataset is highly categorical, which lends itself well to a tree classifier.\n",
+    "\n",
+    "\n",
+    "For initial data exploration, a decision tree classifier was used for it's explainability to gain better insight into the model.\n",
+    "\n",
+    "The resulting confusion matrix indicated that this was a step in the right direction. \n"
    ]
   },
   {
@@ -565,26 +627,6 @@
     "\n",
     "\n",
     "# Let's select a small number of important features\n",
-    "# smalldf = data[['crash_severity',\n",
-    "#                 'crash_time', \n",
-    "#                 'day_of_week', \n",
-    "#                 'intersection_related', \n",
-    "#                 'light_condition', \n",
-    "#                 'manner_of_collision',\n",
-    "#                 'speed_limit',\n",
-    "#                 'surface_condition', \n",
-    "#                 'weather_condition']]\n",
-    "\n",
-    "# smalldf.head()\n",
-    "\n",
-    "# dummies_needed_list = [\n",
-    "#  'day_of_week',\n",
-    "#  'intersection_related',\n",
-    "#  'light_condition',\n",
-    "#  'manner_of_collision',\n",
-    "#  'surface_condition',\n",
-    "#  'weather_condition']\n",
-    "\n",
     "smalldf = data[['crash_severity', \n",
     "                'intersection_related', \n",
     "                'light_condition', \n",
