Added markdown for visualization section.

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -237,7 +237,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualisation"
+    "## Visualisation\n",
+    "Plot a few graphs to get an overview of our data\n",
+    "* Number of reported bike crashes for times of day\n",
+    "* Overall trend in total reported bike crashes by year (2010-2016)\n",
+    "* Breakdown of all crash severity reports\n",
+    "* Heat map of crashes on a map"
    ]
   },
   {
@@ -1893,7 +1898,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
